--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,6 +17,6 @@ margin:5px;
 padding:5px;
 font-family:Arial, Helvetica, sans-serif;
 font-size:12px;
-color: #3b5564;
+/*color: #3b5564;*/
 background-size: cover;
 }
