add numbers 1-12 images and test 1st

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,16 +6,18 @@
      left:50%;">
  <div id="fisheye" class="fisheye">
 		<div class="fisheyeContainter">
-			<a href="#" class="fisheyeItem"><%= image_tag("home.png") %><span>Home</span></a>
-			<a href="#" class="fisheyeItem"><%= image_tag("email.png") %><span>Email</span></a>
-			<a href="#" class="fisheyeItem"><%= image_tag("display.png") %><span>Display</span></a>
-			<a href="#" class="fisheyeItem"><%= image_tag("clock.png") %><span>Clock</span></a>
-			<a href="#" class="fisheyeItem"><%= image_tag("web.png") %><span>Web</span></a>
-			<a href="#" class="fisheyeItem"><%= image_tag("home.png") %><span>Home</span></a>
-			<a href="#" class="fisheyeItem"><%= image_tag("email.png") %><span>Email</span></a>
-			<a href="#" class="fisheyeItem"><%= image_tag("display.png") %><span>Display</span></a>
-			<a href="#" class="fisheyeItem"><%= image_tag("clock.png") %><span>Clock</span></a>
-			<a href="#" class="fisheyeItem"><%= image_tag("web.png") %><span>Web</span></a>
+			<a href="https://github.com/Manik-Ratnas/gemathon" class="fisheyeItem"><%= image_tag("1.jpeg") %><span>1st</span></a>
+			<a href="#" class="fisheyeItem"><%= image_tag("2.jpeg") %><span>2nd</span></a>
+			<a href="#" class="fisheyeItem"><%= image_tag("3.jpeg") %><span>3rd</span></a>
+			<a href="#" class="fisheyeItem"><%= image_tag("4.jpeg") %><span>4th</span></a>
+			<a href="#" class="fisheyeItem"><%= image_tag("5.jpeg") %><span>5th</span></a>
+			<a href="#" class="fisheyeItem"><%= image_tag("6.jpeg") %><span>6th</span></a>
+			<a href="#" class="fisheyeItem"><%= image_tag("7.jpeg") %><span>7th</span></a>
+			<a href="#" class="fisheyeItem"><%= image_tag("8.jpeg") %><span>8th</span></a>
+			<a href="#" class="fisheyeItem"><%= image_tag("9.jpeg") %><span>9th</span></a>
+			<a href="#" class="fisheyeItem"><%= image_tag("10.jpeg") %><span>10th</span></a>
+			<a href="#" class="fisheyeItem"><%= image_tag("11.jpeg") %><span>11th</span></a>
+			<a href="#" class="fisheyeItem"><%= image_tag("12.jpeg") %><span>12th</span></a>
 		</div>
  </div>
 </div>
