--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,18 +6,18 @@
      left:50%;">
  <div id="fisheye" class="fisheye">
 		<div class="fisheyeContainter">
-			<a href="https://github.com/Manik-Ratnas/gemathon" class="fisheyeItem"><%= image_tag("1.jpeg") %><span>1st</span></a>
-			<a href="#" class="fisheyeItem"><%= image_tag("2.jpeg") %><span>2nd</span></a>
-			<a href="#" class="fisheyeItem"><%= image_tag("3.jpeg") %><span>3rd</span></a>
-			<a href="#" class="fisheyeItem"><%= image_tag("4.jpeg") %><span>4th</span></a>
-			<a href="#" class="fisheyeItem"><%= image_tag("5.jpeg") %><span>5th</span></a>
-			<a href="#" class="fisheyeItem"><%= image_tag("6.jpeg") %><span>6th</span></a>
-			<a href="#" class="fisheyeItem"><%= image_tag("7.jpeg") %><span>7th</span></a>
-			<a href="#" class="fisheyeItem"><%= image_tag("8.jpeg") %><span>8th</span></a>
-			<a href="#" class="fisheyeItem"><%= image_tag("9.jpeg") %><span>9th</span></a>
-			<a href="#" class="fisheyeItem"><%= image_tag("10.jpeg") %><span>10th</span></a>
-			<a href="#" class="fisheyeItem"><%= image_tag("11.jpeg") %><span>11th</span></a>
-			<a href="#" class="fisheyeItem"><%= image_tag("12.jpeg") %><span>12th</span></a>
+			<a href="https://github.com/Manik-Ratnas/gemathon" class="fisheyeItem"><%= image_tag("1.jpeg") %><span style="font-style:italic;font-size:15px;color:white;text-align:center">Gemathon!</span></a>
+			<a href="https://github.com/Manik-Ratnas/ar_report" class="fisheyeItem"><%= image_tag("2.jpeg") %><span style="font-style:italic;font-size:15px;color:white;text-align:center">Ar-Report</span></a>
+			<a href="https://github.com/Manik-Ratnas/star_ratings" class="fisheyeItem"><%= image_tag("3.jpeg") %><span style="font-style:italic;font-size:15px;color:white;text-align:center">Star-Ratings</span></a>
+			<a href="https://github.com/Manik-Ratnas/clean_associations" class="fisheyeItem"><%= image_tag("4.jpeg") %><span style="font-style:italic;font-size:15px;color:white;text-align:center">Clean Association</span></a>
+			<a href="https://github.com/Manik-Ratnas/update_or_create" class="fisheyeItem"><%= image_tag("5.jpeg") %><span style="font-style:italic;font-size:15px;color:white;text-align:center">Update-Create</span></a>
+			<a href="https://github.com/Manik-Ratnas/city_detail" class="fisheyeItem"><%= image_tag("6.jpeg") %><span style="font-style:italic;font-size:15px;color:white;text-align:center">City Detail</span></a>
+			<a href="https://github.com/Manik-Ratnas/string_matchables" class="fisheyeItem"><%= image_tag("7.jpeg") %><span style="font-style:italic;font-size:15px;color:white;text-align:center">String Matchable</span></a>
+			<a href="https://github.com/Manik-Ratnas/special_char_remover" class="fisheyeItem"><%= image_tag("8.jpeg") %><span style="font-style:italic;font-size:15px;color:white;text-align:center">Special Char Rm</span></a>
+			<a href="https://github.com/Manik-Ratnas/github-contributions" class="fisheyeItem"><%= image_tag("9.jpeg") %><span style="font-style:italic;font-size:15px;color:white;text-align:center">Github Contri</span></a>
+			<a href="https://github.com/pythonicrubyist/junkyard" class="fisheyeItem"><%= image_tag("10.jpeg") %><span style="font-style:italic;font-size:15px;color:white;text-align:center">JunkYard</span></a>
+			<a href="https://github.com/pythonicrubyist/scent" class="fisheyeItem"><%= image_tag("11.jpeg") %><span style="font-style:italic;font-size:15px;color:white;text-align:center">Scent</span></a>
+			<a href="https://github.com/pythonicrubyist/xlsx2json" class="fisheyeItem"><%= image_tag("12.jpeg") %><span style="font-style:italic;font-size:15px;color:white;text-align:center">XLS-Json</span></a>
 		</div>
  </div>
 </div>
