--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,23 +1,23 @@
 
-<div style="font-style:italic;font-size:60px;color:white;text-align:center"> The Manik Ratna's</div>
+<div style="font-style:italic;font-size:60px;color:red;text-align:center"> The Manik Ratna's</div>
 <div class="container" style="  position:absolute;
      z-index:15;
      top:50%;
      left:50%;">
  <div id="fisheye" class="fisheye">
 		<div class="fisheyeContainter">
-			<a href="https://github.com/Manik-Ratnas/ar_report" class="fisheyeItem"><%= image_tag("ruby1.png") %><span style="font-style:italic;font-size:15px;color:white;text-align:center">Ar-Report</span></a>
-			<a href="https://github.com/Manik-Ratnas/star_ratings" class="fisheyeItem"><%= image_tag("ruby1.png") %><span style="font-style:italic;font-size:15px;color:white;text-align:center">Star-Ratings</span></a>
-			<a href="https://github.com/Manik-Ratnas/clean_associations" class="fisheyeItem"><%= image_tag("ruby1.png") %><span style="font-style:italic;font-size:15px;color:white;text-align:center">Clean Association</span></a>
-			<a href="https://github.com/Manik-Ratnas/update_or_create" class="fisheyeItem"><%= image_tag("ruby1.png") %><span style="font-style:italic;font-size:15px;color:white;text-align:center">Update-Create</span></a>
-			<a href="https://github.com/Manik-Ratnas/city_detail" class="fisheyeItem"><%= image_tag("ruby1.png") %><span style="font-style:italic;font-size:15px;color:white;text-align:center">City Detail</span></a>
-			<a href="https://github.com/Manik-Ratnas/string_matchables" class="fisheyeItem"><%= image_tag("ruby1.png") %><span style="font-style:italic;font-size:15px;color:white;text-align:center">String Matchable</span></a>
-			<a href="https://github.com/Manik-Ratnas/special_char_remover" class="fisheyeItem"><%= image_tag("ruby1.png") %><span style="font-style:italic;font-size:15px;color:white;text-align:center">Special Char Rm</span></a>
-			<a href="https://github.com/Manik-Ratnas/github-contributions" class="fisheyeItem"><%= image_tag("ruby1.png") %><span style="font-style:italic;font-size:15px;color:white;text-align:center">Github Contri</span></a>
-			<a href="https://github.com/pythonicrubyist/junkyard" class="fisheyeItem"><%= image_tag("ruby1.png") %><span style="font-style:italic;font-size:15px;color:white;text-align:center">JunkYard</span></a>
-			<a href="https://github.com/pythonicrubyist/scent" class="fisheyeItem"><%= image_tag("ruby1.png") %><span style="font-style:italic;font-size:15px;color:white;text-align:center">Scent</span></a>
-			<a href="https://github.com/pythonicrubyist/xlsx2json" class="fisheyeItem"><%= image_tag("ruby1.png") %><span style="font-style:italic;font-size:15px;color:white;text-align:center">XLS-Json</span></a>
-			<a href="https://github.com/Manik-Ratnas/gemathon" class="fisheyeItem"><%= image_tag("ruby1.png") %><span style="font-style:italic;font-size:15px;color:white;text-align:center">Gemathon!</span></a>
+			<a href="https://github.com/Manik-Ratnas/ar_report" class="fisheyeItem"><%= image_tag("ruby1.png") %><span style="font-style:italic;font-size:15px;color:red;text-align:center">Ar-Report</span></a>
+			<a href="https://github.com/Manik-Ratnas/star_ratings" class="fisheyeItem"><%= image_tag("ruby1.png") %><span style="font-style:italic;font-size:15px;color:red;text-align:center">Star-Ratings</span></a>
+			<a href="https://github.com/Manik-Ratnas/clean_associations" class="fisheyeItem"><%= image_tag("ruby1.png") %><span style="font-style:italic;font-size:15px;color:red;text-align:center">Clean Association</span></a>
+			<a href="https://github.com/Manik-Ratnas/update_or_create" class="fisheyeItem"><%= image_tag("ruby1.png") %><span style="font-style:italic;font-size:15px;color:red;text-align:center">Update-Create</span></a>
+			<a href="https://github.com/Manik-Ratnas/city_detail" class="fisheyeItem"><%= image_tag("ruby1.png") %><span style="font-style:italic;font-size:15px;color:red;text-align:center">City Detail</span></a>
+			<a href="https://github.com/Manik-Ratnas/string_matchables" class="fisheyeItem"><%= image_tag("ruby1.png") %><span style="font-style:italic;font-size:15px;color:red;text-align:center">String Matchable</span></a>
+			<a href="https://github.com/Manik-Ratnas/special_char_remover" class="fisheyeItem"><%= image_tag("ruby1.png") %><span style="font-style:italic;font-size:15px;color:red;text-align:center">Special Char Rm</span></a>
+			<a href="https://github.com/Manik-Ratnas/github-contributions" class="fisheyeItem"><%= image_tag("ruby1.png") %><span style="font-style:italic;font-size:15px;color:red;text-align:center">Github Contri</span></a>
+			<a href="https://github.com/pythonicrubyist/junkyard" class="fisheyeItem"><%= image_tag("ruby1.png") %><span style="font-style:italic;font-size:15px;color:red;text-align:center">JunkYard</span></a>
+			<a href="https://github.com/Manik-Ratnas/set_time_zone" class="fisheyeItem"><%= image_tag("ruby1.png") %><span style="font-style:italic;font-size:15px;color:red;text-align:center">Set Time Zone</span></a>
+			<a href="https://github.com/pythonicrubyist/xlsx2json" class="fisheyeItem"><%= image_tag("ruby1.png") %><span style="font-style:italic;font-size:15px;color:red;text-align:center">XLS-Json</span></a>
+			<a href="https://github.com/Manik-Ratnas/gemathon" class="fisheyeItem"><%= image_tag("ruby1.png") %><span style="font-style:italic;font-size:15px;color:red;text-align:center">Gemathon!</span></a>
 		</div>
  </div>
 </div>
