--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
 
-<div style="font-style:italic;font-size:60px;color:red;text-align:center"> The Manik Ratna's</div>
+<div style="font-style:italic;font-size:60px;color:white;text-align:center"> The Manik Ratna's</div>
 <div class="container" style="  position:absolute;
      z-index:15;
      top:50%;
